# grocery-store

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml
backend/config/: settings.py
config/: asgi.py  wsgi.py
config/settings/: base.py  production.py  pydantic.py
docker/: entrypoint.sh
tests/: test_project.py
