[project]
name = "grocery-store"
version = "0.1.0"
description = "Production-grade backend for an online grocery store."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Didar" }
]

dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[tool.uv]
package = false
